--- a/package.json
+++ b/package.json
@@ -20,13 +20,16 @@
   },
   "dependencies": {
     "@nestjs/cli": "^11.0.12",
+    "@nestjs/axios": "^4.0.0",
     "@nestjs/common": "^11.1.9",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.1.9",
     "@nestjs/platform-express": "^11.1.9",
+    "@nestjs/schedule": "^6.0.0",
     "@nestjs/swagger": "^11.2.3",
     "@prisma/client": "^6.7.0",
     "@types/express": "^5.0.5",
+    "axios": "^1.9.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.3",
     "date-fns": "^4.1.0",
